{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 1319,
  "lineage": "8d87e806-7a38-e3df-02df-162a6689b6dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d684a0b2cc18ed6",
            "arn": "arn:aws:ec2:eu-west-3:631771614027:elastic-ip/eipalloc-08d684a0b2cc18ed6",
            "association_id": "eipassoc-0b22c23f0d80ccf4c",
            "domain": "vpc",
            "id": "eipalloc-08d684a0b2cc18ed6",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0a0c11f50162df8a9",
            "private_dns": "ip-10-0-1-71.eu-west-3.compute.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-15-188-181-86.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.181.86",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-3",
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007727d4ba0cc9d29",
            "arn": "arn:aws:ec2:eu-west-3:631771614027:elastic-ip/eipalloc-007727d4ba0cc9d29",
            "association_id": "eipassoc-0390298a9cbd025ff",
            "domain": "vpc",
            "id": "eipalloc-007727d4ba0cc9d29",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-03b205f9445b307a4",
            "private_dns": "ip-10-0-3-204.eu-west-3.compute.internal",
            "private_ip": "10.0.3.204",
            "public_dns": "ec2-15-237-170-170.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.170.170",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-3",
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b68bb67f0259e18",
            "arn": "arn:aws:ec2:eu-west-3:631771614027:elastic-ip/eipalloc-02b68bb67f0259e18",
            "association_id": "eipassoc-020693b1d1090c743",
            "domain": "vpc",
            "id": "eipalloc-02b68bb67f0259e18",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-06788eddaecdea1af",
            "private_dns": "ip-10-0-5-67.eu-west-3.compute.internal",
            "private_ip": "10.0.5.67",
            "public_dns": "ec2-13-37-183-159.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.183.159",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-3",
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:internet-gateway/igw-0145827a183259aa9",
            "id": "igw-0145827a183259aa9",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "internet_gateway",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod_app_back_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-back-alb/c237cb5d484afbf9",
            "arn_suffix": "app/prod-app-back-alb/c237cb5d484afbf9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-prod-app-back-alb-63789663.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-back-alb/c237cb5d484afbf9",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-app-back-alb",
            "preserve_host_header": false,
            "region": "eu-west-3",
            "security_groups": [
              "sg-068b86545ec33128f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0464ae117a0a8ab88"
              },
              {
                "subnet_id": "subnet-0c250aace360e774e"
              },
              {
                "subnet_id": "subnet-0e0820c1a825f831b"
              }
            ],
            "subnets": [
              "subnet-0464ae117a0a8ab88",
              "subnet-0c250aace360e774e",
              "subnet-0e0820c1a825f831b"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-back-alb/c237cb5d484afbf9"
          },
          "dependencies": [
            "aws_security_group.back_lb_sg",
            "aws_subnet.private",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod_app_front_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-front-alb/aefbbb1bf511a9dd",
            "arn_suffix": "app/prod-app-front-alb/aefbbb1bf511a9dd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-app-front-alb-1725643813.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-front-alb/aefbbb1bf511a9dd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-app-front-alb",
            "preserve_host_header": false,
            "region": "eu-west-3",
            "security_groups": [
              "sg-0d3fb0493e7010629"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007e292e82b27cc10"
              },
              {
                "subnet_id": "subnet-0382eb090afd14b75"
              },
              {
                "subnet_id": "subnet-0fd82f237461f9508"
              }
            ],
            "subnets": [
              "subnet-007e292e82b27cc10",
              "subnet-0382eb090afd14b75",
              "subnet-0fd82f237461f9508"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-front-alb/aefbbb1bf511a9dd"
          },
          "dependencies": [
            "aws_security_group.front_lb_sg",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:listener/app/prod-app-front-alb/aefbbb1bf511a9dd/bdf79d6144c545dd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:targetgroup/front-app-tg/c77385283eca597b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:listener/app/prod-app-front-alb/aefbbb1bf511a9dd/bdf79d6144c545dd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-front-alb/aefbbb1bf511a9dd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-3",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.prod_app_front_alb",
            "aws_lb_target_group.front_app_tg",
            "aws_security_group.front_lb_sg",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tcp_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:listener/app/prod-app-back-alb/c237cb5d484afbf9/d4bc2d886b244389",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:targetgroup/back-app-tg/29feb9b9264bb7fa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:listener/app/prod-app-back-alb/c237cb5d484afbf9/d4bc2d886b244389",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-back-alb/c237cb5d484afbf9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-3",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.prod_app_back_alb",
            "aws_lb_target_group.back_app_tg",
            "aws_security_group.back_lb_sg",
            "aws_subnet.private",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:targetgroup/back-app-tg/29feb9b9264bb7fa",
            "arn_suffix": "targetgroup/back-app-tg/29feb9b9264bb7fa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:targetgroup/back-app-tg/29feb9b9264bb7fa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-back-alb/c237cb5d484afbf9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "back-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-3",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:targetgroup/front-app-tg/c77385283eca597b",
            "arn_suffix": "targetgroup/front-app-tg/c77385283eca597b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:631771614027:targetgroup/front-app-tg/c77385283eca597b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:631771614027:loadbalancer/app/prod-app-front-alb/aefbbb1bf511a9dd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "front-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-3",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08d684a0b2cc18ed6",
            "association_id": "eipassoc-0b22c23f0d80ccf4c",
            "connectivity_type": "public",
            "id": "nat-07f4d4625d9ce51c9",
            "network_interface_id": "eni-0a0c11f50162df8a9",
            "private_ip": "10.0.1.71",
            "public_ip": "15.188.181.86",
            "region": "eu-west-3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fd82f237461f9508",
            "tags": {
              "Name": "nat_gw_1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nat_gw_1",
              "Project": "C1",
              "Terraformed": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007727d4ba0cc9d29",
            "association_id": "eipassoc-0390298a9cbd025ff",
            "connectivity_type": "public",
            "id": "nat-0cd12605069e2d80e",
            "network_interface_id": "eni-03b205f9445b307a4",
            "private_ip": "10.0.3.204",
            "public_ip": "15.237.170.170",
            "region": "eu-west-3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-007e292e82b27cc10",
            "tags": {
              "Name": "nat_gw_2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nat_gw_2",
              "Project": "C1",
              "Terraformed": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b68bb67f0259e18",
            "association_id": "eipassoc-020693b1d1090c743",
            "connectivity_type": "public",
            "id": "nat-05e5d3b9d4a21bdaf",
            "network_interface_id": "eni-06788eddaecdea1af",
            "private_ip": "10.0.5.67",
            "public_ip": "13.37.183.159",
            "region": "eu-west-3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0382eb090afd14b75",
            "tags": {
              "Name": "nat_gw_3"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nat_gw_3",
              "Project": "C1",
              "Terraformed": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat3",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:route-table/rtb-0023c0572b70ccbd2",
            "id": "rtb-0023c0572b70ccbd2",
            "owner_id": "631771614027",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f4d4625d9ce51c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private_1",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gw_1",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:route-table/rtb-0c44466183d8233b7",
            "id": "rtb-0c44466183d8233b7",
            "owner_id": "631771614027",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd12605069e2d80e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private_2",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gw_2",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:route-table/rtb-0389135bcd609f74b",
            "id": "rtb-0389135bcd609f74b",
            "owner_id": "631771614027",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e5d3b9d4a21bdaf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_3"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "private_3",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat3",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gw_3",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:route-table/rtb-07df2f777a7b890ed",
            "id": "rtb-07df2f777a7b890ed",
            "owner_id": "631771614027",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0145827a183259aa9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "public",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f92e6bcb19b7f61",
            "region": "eu-west-3",
            "route_table_id": "rtb-0023c0572b70ccbd2",
            "subnet_id": "subnet-0464ae117a0a8ab88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.private_1",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_priv1_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f92e6bcb19b7f61",
            "region": "eu-west-3",
            "route_table_id": "rtb-0023c0572b70ccbd2",
            "subnet_id": "subnet-0464ae117a0a8ab88"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.private_1",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_priv2_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e3a3e0f97e41f95",
            "region": "eu-west-3",
            "route_table_id": "rtb-0c44466183d8233b7",
            "subnet_id": "subnet-0c250aace360e774e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gw_2",
            "aws_route_table.private_2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_priv3_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0579101217e7fca73",
            "region": "eu-west-3",
            "route_table_id": "rtb-0389135bcd609f74b",
            "subnet_id": "subnet-0e0820c1a825f831b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat3",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gw_3",
            "aws_route_table.private_3",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_pub1_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0515468c6eeddf057",
            "region": "eu-west-3",
            "route_table_id": "rtb-07df2f777a7b890ed",
            "subnet_id": "subnet-0fd82f237461f9508"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_pub2_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4d767a61dff76d2",
            "region": "eu-west-3",
            "route_table_id": "rtb-07df2f777a7b890ed",
            "subnet_id": "subnet-007e292e82b27cc10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_pub3_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f26e0728d306839",
            "region": "eu-west-3",
            "route_table_id": "rtb-07df2f777a7b890ed",
            "subnet_id": "subnet-0382eb090afd14b75"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group/sg-084e1131512cec626",
            "description": "allow_all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084e1131512cec626",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow all"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Allow all",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group/sg-068b86545ec33128f",
            "description": "Allow prod-app-front inbound traffic and prod-app-back or all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-068b86545ec33128f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "back-lb-sg",
            "name_prefix": "",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_base",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group/sg-0237b51759b98f094",
            "description": "data_base",
            "egress": [],
            "id": "sg-0237b51759b98f094",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be9db36fa86df363"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "data_base",
            "name_prefix": "",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "data_base"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "data_base",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group/sg-09bcbffc1242c887e",
            "description": "endpoint",
            "egress": [],
            "id": "sg-09bcbffc1242c887e",
            "ingress": [],
            "name": "endpoint",
            "name_prefix": "",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group/sg-0d3fb0493e7010629",
            "description": "Allow TCP inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0d3fb0493e7010629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "front-lb-sg",
            "name_prefix": "",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app_back_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group/sg-0be9db36fa86df363",
            "description": "Allow back-lg inbound traffic and all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0be9db36fa86df363",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-app-back-sg",
            "name_prefix": "",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_app_front_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group/sg-013e005c37bbb330c",
            "description": "Allow front-alb inbound traffic and back-alb outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-013e005c37bbb330c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-app-front-sg",
            "name_prefix": "",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:subnet/subnet-0464ae117a0a8ab88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0464ae117a0a8ab88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631771614027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "sub_priv_1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "sub_priv_1",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:subnet/subnet-0c250aace360e774e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c250aace360e774e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631771614027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "sub_priv_2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "sub_priv_2",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:subnet/subnet-0e0820c1a825f831b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0820c1a825f831b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631771614027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "sub_priv_3"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "sub_priv_3",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:subnet/subnet-0fd82f237461f9508",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd82f237461f9508",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631771614027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "sub_pub_1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "sub_pub_1",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:subnet/subnet-007e292e82b27cc10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007e292e82b27cc10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631771614027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "sub_pub_2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "sub_pub_2",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:subnet/subnet-0382eb090afd14b75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0382eb090afd14b75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631771614027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "sub_pub_3"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "sub_pub_3",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:vpc/vpc-09de41a062e6c45c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2adc490ed4f182d",
            "default_route_table_id": "rtb-0891cff3c2b47b7db",
            "default_security_group_id": "sg-03b2f034c0fa99662",
            "dhcp_options_id": "dopt-0ba1d6cb073481121",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09de41a062e6c45c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0891cff3c2b47b7db",
            "owner_id": "631771614027",
            "region": "eu-west-3",
            "tags": {
              "Name": "Production VPC"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Production VPC",
              "Project": "C1",
              "Terraformed": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:vpc-endpoint/vpce-0347ec4db9efd002d",
            "dns_entry": [
              {
                "dns_name": "vpce-0347ec4db9efd002d-sgq41vdo.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0347ec4db9efd002d-sgq41vdo-eu-west-3a.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0347ec4db9efd002d-sgq41vdo-eu-west-3c.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0347ec4db9efd002d-sgq41vdo-eu-west-3b.ec2messages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ec2messages.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z08720263FNDO7V2URERS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0347ec4db9efd002d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-049645691543bbded",
              "eni-08b794917e63bb8be",
              "eni-0c84a178b54562f40"
            ],
            "owner_id": "631771614027",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-3",
            "requester_managed": false,
            "security_group_ids": [
              "sg-084e1131512cec626"
            ],
            "service_name": "com.amazonaws.eu-west-3.ec2messages",
            "service_region": "eu-west-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.218",
                "subnet_id": "subnet-0464ae117a0a8ab88"
              },
              {
                "ipv4": "10.0.4.153",
                "subnet_id": "subnet-0c250aace360e774e"
              },
              {
                "ipv4": "10.0.6.109",
                "subnet_id": "subnet-0e0820c1a825f831b"
              }
            ],
            "subnet_ids": [
              "subnet-0464ae117a0a8ab88",
              "subnet-0c250aace360e774e",
              "subnet-0e0820c1a825f831b"
            ],
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.private",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:vpc-endpoint/vpce-03adf6907e3e08c74",
            "cidr_blocks": [
              "3.5.224.0/22",
              "16.12.18.0/23",
              "3.5.204.0/22",
              "52.95.154.0/23",
              "16.12.20.0/24",
              "52.95.156.0/24"
            ],
            "id": "vpce-03adf6907e3e08c74",
            "owner_id": "631771614027",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:ListBucket\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "region": "eu-west-3",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0023c0572b70ccbd2",
              "rtb-0389135bcd609f74b",
              "rtb-07df2f777a7b890ed",
              "rtb-0c44466183d8233b7"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "service_region": "eu-west-3",
            "state": "available",
            "tags": {
              "Name": "app-vpce-s3"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "app-vpce-s3",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat1",
            "aws_eip.nat2",
            "aws_eip.nat3",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gw_1",
            "aws_nat_gateway.nat_gw_2",
            "aws_nat_gateway.nat_gw_3",
            "aws_route_table.private_1",
            "aws_route_table.private_2",
            "aws_route_table.private_3",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:vpc-endpoint/vpce-0c814504c189bf843",
            "dns_entry": [
              {
                "dns_name": "vpce-0c814504c189bf843-a67dkqpe.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0c814504c189bf843-a67dkqpe-eu-west-3c.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0c814504c189bf843-a67dkqpe-eu-west-3a.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0c814504c189bf843-a67dkqpe-eu-west-3b.ssm.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ssm.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z0104647HF5CTLSBLJGL"
              },
              {
                "dns_name": "ssm.eu-west-3.api.aws",
                "hosted_zone_id": "Z03522122DR62SYEHJTCC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c814504c189bf843",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05472265c513cbf88",
              "eni-06472b6cedce684d8",
              "eni-0cfb18adbd9547838"
            ],
            "owner_id": "631771614027",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-3",
            "requester_managed": false,
            "security_group_ids": [
              "sg-084e1131512cec626"
            ],
            "service_name": "com.amazonaws.eu-west-3.ssm",
            "service_region": "eu-west-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.166",
                "subnet_id": "subnet-0464ae117a0a8ab88"
              },
              {
                "ipv4": "10.0.4.159",
                "subnet_id": "subnet-0c250aace360e774e"
              },
              {
                "ipv4": "10.0.6.134",
                "subnet_id": "subnet-0e0820c1a825f831b"
              }
            ],
            "subnet_ids": [
              "subnet-0464ae117a0a8ab88",
              "subnet-0c250aace360e774e",
              "subnet-0e0820c1a825f831b"
            ],
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.private",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:vpc-endpoint/vpce-0895b6e17ea655fb6",
            "dns_entry": [
              {
                "dns_name": "vpce-0895b6e17ea655fb6-apf3qbw9.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0895b6e17ea655fb6-apf3qbw9-eu-west-3a.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0895b6e17ea655fb6-apf3qbw9-eu-west-3c.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "vpce-0895b6e17ea655fb6-apf3qbw9-eu-west-3b.ssmmessages.eu-west-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z1DWHTMFP0WECP"
              },
              {
                "dns_name": "ssmmessages.eu-west-3.amazonaws.com",
                "hosted_zone_id": "Z00459021FPBKJC7VCPU2"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0895b6e17ea655fb6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0797ad23c62b20ea2",
              "eni-080ef83a1305b4f8b",
              "eni-0ae3b9c538f5df90d"
            ],
            "owner_id": "631771614027",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-west-3",
            "requester_managed": false,
            "security_group_ids": [
              "sg-084e1131512cec626"
            ],
            "service_name": "com.amazonaws.eu-west-3.ssmmessages",
            "service_region": "eu-west-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.115",
                "subnet_id": "subnet-0464ae117a0a8ab88"
              },
              {
                "ipv4": "10.0.4.198",
                "subnet_id": "subnet-0c250aace360e774e"
              },
              {
                "ipv4": "10.0.6.229",
                "subnet_id": "subnet-0e0820c1a825f831b"
              }
            ],
            "subnet_ids": [
              "subnet-0464ae117a0a8ab88",
              "subnet-0c250aace360e774e",
              "subnet-0e0820c1a825f831b"
            ],
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09de41a062e6c45c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.private",
            "aws_vpc.production",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group-rule/sgr-041dd6ea0d479e658",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-041dd6ea0d479e658",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-084e1131512cec626",
            "security_group_rule_id": "sgr-041dd6ea0d479e658",
            "tags": null,
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group-rule/sgr-0fa8caceea911afb2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0fa8caceea911afb2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-084e1131512cec626",
            "security_group_rule_id": "sgr-0fa8caceea911afb2",
            "tags": null,
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_vpc.production"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_prod_app_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:631771614027:security-group-rule/sgr-03b09985503dd1f97",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-03b09985503dd1f97",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0be9db36fa86df363",
            "region": "eu-west-3",
            "security_group_id": "sg-0237b51759b98f094",
            "security_group_rule_id": "sgr-03b09985503dd1f97",
            "tags": null,
            "tags_all": {
              "Environment": "production",
              "Project": "C1",
              "Terraformed": "true"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.data_base",
            "aws_security_group.prod_app_back_sg",
            "aws_vpc.production"
          ]
        }
      ]
    }
  ]
}